tests/valid/Constant_Valid_2.whiley

constant ZLIB is 0

type CompressionMethod is {ZLIB}
