tests/invalid/Parsing_Invalid_2.whiley
type nat is int
type nat is {int x, int y}
